--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
-    "govuk-frontend": "5.2.0",
+    "govuk-frontend": "^5.3.0",
     "govuk-prototype-kit": "13.16.1"
+  },
+  "overrides": {
+    "zlib": "./_EXCLUDED_"
   }
 }
