--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "start": "govuk-prototype-kit start"
   },
   "dependencies": {
-    "@govuk-prototype-kit/common-templates": "2.0.1",
-    "govuk-frontend": "^5.3.0",
+    "@govuk-prototype-kit/common-templates": "^2.0.1",
+    "govuk-frontend": "^5.4.1",
     "govuk-prototype-kit": "^13.16.2"
+  },
+  "overrides": {
+    "sass": "1.77.6"
   }
 }
