--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "start": "node node_modules/govuk-prototype-kit/bin/cli start"
   },
   "dependencies": {
-    "@govuk-prototype-kit/common-templates": "^2.0.1",
-    "govuk-frontend": "^5.4.1",
-    "govuk-prototype-kit": "^13.16.2"
+    "@govuk-prototype-kit/common-templates": "2.0.1",
+    "govuk-frontend": "5.6.0",
+    "govuk-prototype-kit": "13.16.2"
   },
   "overrides": {
     "sass": "1.77.6"
