--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
-    "govuk-frontend": "5.10.0",
-    "govuk-prototype-kit": "13.16.2"
+    "govuk-frontend": "^5.11.0",
+    "govuk-prototype-kit": "^13.17.0"
   },
   "overrides": {
     "sass": "1.77.6"
